<resources>
    <string name="app_name">Comandas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Login fragment-->
    <string name="sign_int_with_google">Sign in with Google</string>
    <string name="copyright">2024</string>
    <string name="only_uth">Only for stundents and faculty of UTH</string>

    <string name="welcome">Welcome!</string>
    <string name="welcome1">Discover a new way to order your favorite food.</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="favorite">Order your favorite food!</string>
    <string name="favoritetext">Quick and easy ordering for your favorite flavors.</string>
    <string name="rte">Ready Meal!</string>
    <string name="rte1">Order online and pick up without delays</string>
    <string name="default_web_client_id">42361345147-epfb9pqnobcp0mv1cjfebrl4b8ek080h.apps.googleusercontent.com</string>


</resources>
