<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="onboarding.FirstFragment"
    android:background="@color/background1"
    >

    <ImageView
        android:id="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:scaleType="fitStart"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/order"
        android:contentDescription="ordenando comida" />

    <TextView
        android:id="@+id/fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite"
        android:layout_marginTop="-50dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/OBText"/>

    <TextView
        android:id="@+id/fav1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/favoritetext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/WelcomeText1"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        />
    <Button

        android:id="@+id/Secondbottom1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/next"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="230dp"
        android:layout_marginEnd="20dp"
        style="@style/bottonwelcome"
        />
    <Button

        android:id="@+id/Secondbottom2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/previous"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="230dp"

        style="@style/bottonwelcome"
        />




</androidx.constraintlayout.widget.ConstraintLayout>