<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="onboarding.FirstFragment"
    android:background="@color/background1">


    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scaleType="fitStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/chefsito" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="@+id/login_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/WelcomeText"
/>
    <TextView
        android:id="@+id/welcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome1"
        android:layout_marginTop="-100dp"
        app:layout_constraintTop_toTopOf="@+id/welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/WelcomeText1"
        />

    <Button

        android:id="@+id/bottomWelcome"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="240dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@+id/welcome1"


        />

 </androidx.constraintlayout.widget.ConstraintLayout>