<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="onboarding.FirstFragment"
    android:background="@color/background1"
    >
    <ImageView
        android:id="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/foods"
        android:contentDescription="Microondas" />

    <TextView
        android:id="@+id/rte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rte"
        android:layout_marginTop="-50dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/OBText"/>

    <TextView
        android:id="@+id/rte1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rte1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/WelcomeText1"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        />

    <Button

        android:id="@+id/thirdbottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/previous"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="230dp"

        style="@style/bottonwelcome"
        />

</androidx.constraintlayout.widget.ConstraintLayout>